--- a/pages/about.html
+++ b/pages/about.html
@@ -69,16 +69,14 @@
                             <p class="aboutListHeader">Гибкость</p>
                             <p class="aboutListText">Система должна обеспечивать возможность получения обратной связи <br> 
                                 от пользователей, чтобы разработчики могли улучшать сервис и делать его ещё более удобным и функциональным. </p>
-                            
                         </li>
-                       
                     </ul>
                 </div>
                 <div class="contentBlock">
                     <h2>Развитие</h2>
                     <div class="manyTexts developmentTexts">
                         <p>Чтобы MEILE дизайн-система оставалась актуальной и современной, необходимо следить за новыми тенденциями в области дизайна и технологий. Поэтому планируется продолжение работы над новыми функциями и возможностями, чтобы сделать процесс планирования путешествий ещё более удобным и эффективным.</p>
-                        <p>Вы можете связаться с разработчиками<br><a href="#">gvv55221133@gmail.com</a> — Головин Валерий<br><a href="#">ekkatterinnka@gmail.com</a> — Морозова Екатерина<br><a href="#">nast00p@gmail.com</a> — Прокофьева Анастасия</p>
+                        <p id="linksDevelopment">Вы можете связаться с разработчиками<br><span class="pLink">gvv55221133@gmail.com</span> — Головин Валерий<br><span class="pLink">ekkatterinnka@gmail.com</span> — Морозова Екатерина<br><span class="pLink">nast00p@gmail.com</span> — Прокофьева Анастасия</p>
                         <p>Мы будем рады получить от Вас обратную связь!</p>
                     </div>
                 </div>  
