--- a/pages/colors.html
+++ b/pages/colors.html
@@ -363,7 +363,15 @@
                     </div>
                     <p class="paddingTop24">Например, синий цвет может использоваться в качестве ссылок на дополнительные материалы, подсказок или контекстных объяснений. Синий подчеркивает функцию предоставления информации, делая ее легко различимой.</p>
                     <div class=" paddingTop24 beforeh3">
-                        <img src="../img/colorsInfo.png" />
+                        <img src="../img/colorsInfo.png" style="width: 409px; height: 138px;"/>
+                    </div>
+                </div>
+                <div class="contentBlock">
+                    <h2>Стандарты доступности</h2>
+                    <div class="manyTexts">
+                        <p>Для проверки доступности используется стандарт WCAG AA (уровень доступности AA, или AA-level), который подразумевает соблюдение коэффициента контрастности между текстом и фоном, который должен быть не ниже АА уровня.</p>
+                        <p>WCAG (Web Content Accessibility Guidelines) — это международные стандарты доступности веб-контента, которые разрабатываются и поддерживаются консорциумом <a href="https://www.w3.org/">W3C (World Wide Web Consortium)</a>.</p>
+                        <p>Воспользуйтесь этими критериями, чтобы убедиться, что ваши проекты соответствуют аспектам доступности.</p>
                     </div>
                 </div>
             </div>
