--- a/pages/images.html
+++ b/pages/images.html
@@ -67,10 +67,19 @@
                     <div class="manyTexts">
                         <h2>Формат изображения</h2>
                         <P>Для веб-приложений используется много разных форматов изображений.<br>Поэтому важно пользоваться такими форматами правильно.<br>Рекомендуется использовать три формата:</P>
-                        <ul class="ulWithDashes">
-                            <li>webp. Один из новейших форматов. Его лучше всего использовать<br>для растровых изображений. В таком формате получается идеальное соотношения веса изображения к его качеству. Однако есть небольшая вероятность, что изображение будет открыто в старом браузере,<br>который не поддерживает данный формат.</li>
-                            <li>png. Его можно использоваться также, как и webp, просто второй более новый и оптимизированный. Скорее всего, при использовании такого формата вы<br>не встретитесь с проблемами старых браузеров, поскольку png формат один из самых старых форматов изображений.</li>
-                            <li>svg. Векторный формат. Самые простые изображения, иконки, логотип: это все лучше делать в векторном формате. Иными словами, рекомендуется выбирать векторный формат взамен растрового, если есть такая возможность.</li>
+                        <ul class="aboutList">
+                            <li>
+                                <p class="aboutListHeader">webp.</p>
+                                <p class="aboutListText"> Один из новейших форматов. Его лучше всего использовать<br>для растровых изображений. В таком формате получается идеальное соотношения веса изображения к его качеству. Однако есть небольшая вероятность, что изображение будет открыто в старом браузере,<br>который не поддерживает данный формат.</p>
+                            </li>
+                            <li>
+                                <p class="aboutListHeader">png.</p>
+                                <p class="aboutListText">Его можно использоваться также, как и webp, просто второй более новый и оптимизированный. Скорее всего, при использовании такого формата вы<br>не встретитесь с проблемами старых браузеров, поскольку png формат один из самых старых форматов изображений.</p>
+                            </li>
+                            <li>
+                                <p class="aboutListHeader">svg.</p>
+                                <p class="aboutListText">Векторный формат. Самые простые изображения, иконки, логотип: это все лучше делать в векторном формате. Иными словами, рекомендуется выбирать векторный формат взамен растрового, если есть такая возможность.</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
