--- a/pages/layout.html
+++ b/pages/layout.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="manyTexts">
                         <p>Тем не менее, необязательно все величины обязательно должны быть кратны 8.</p>
-                        <p>Было введено понятие полмодуля (4px) —  его можно использовать в размерах до 50 пикселей. То есть, возможно использование, например, расстояний, которые будут равны 2.5m или 1.5m.</p>
+                        <p>Было введено понятие полмодуля (4px) —  его можно использовать в размерах<br>до 50 пикселей. То есть, возможно использование, например, расстояний, которые будут равны 2.5m или 1.5m.</p>
                     </div>
                     <div class="exampleMenuWrapper paddingBot28">
                         <img src="../img/layout_module2.svg" />
