--- a/pages/loading.html
+++ b/pages/loading.html
@@ -35,7 +35,7 @@
         <div class="page">
             <div class="mainContent">
                 <div class="contentBlock">
-                    <h1>Прогрузка контента</h1>
+                    <h1>Загрузка контента</h1>
                     <div class="manyTexts">
                         <p>Использование изображений, графики и видео может облегчить понимание контента для многих людей, особенно для людей с когнитивными нарушениями. Они также могут служить подсказками, которые используют люди с нарушениями зрения, чтобы ориентироваться в контенте.</p>
                         <p>Однако вам всегда следует предоставлять альтернативу мультимедийным материалам, чтобы люди, которые не могут воспринимать визуальную информацию, не пропустили тот же контент.</p>
@@ -59,11 +59,11 @@
                             <div class="exampleMenuWrapper loadingPadding">
                                 <img src="../img/loading_skeleton3.svg" />
                             </div>
-                            <li class="zeroPadding">невысокий прямоугольный скелетон для текста;</li>
+                            <li class="zeroPadding">высокий прямоугольный скелетон для картинок и прямоугольных блоков;</li>
                             <div class="exampleMenuWrapper loadingPadding">
                                 <img src="../img/loading_skeleton2.svg" />
                             </div>
-                            <li class="zeroPadding">невысокий прямоугольный скелетон для текста;</li>
+                            <li class="zeroPadding">круглый скелетон для картинок и аватарок.</li>
                             <div class="exampleMenuWrapper loadingPadding">
                                 <img src="../img/loading_skeleton4.svg" />
                             </div>
