--- a/pages/typography.html
+++ b/pages/typography.html
@@ -143,19 +143,13 @@
                         <p>Отступы при заголовках разного уровня рассчитываются относительно размера текста в пикселях.</p>
                         <p>Верхние отступы для отделения и структуризации информации больше размера текста. Нижние отступы, наоборот, чтобы текст сильно не отдалялся - меньше.</p>
                     </div>
-                    <div class="exampleMenuWrapper">
-                        <img src="../img/typoH1.svg" />
-                    </div>
-                    <div class="exampleMenuWrapper">
-                        <img src="../img/typoH2.svg" />
-                    </div>
                     <div class="exampleMenuWrapper beforeh3">
-                        <img src="../img/typoH3.svg" />
+                        <img src="../img/typoHeaders.svg" />
                     </div>
                     <h3>Текст</h3>
                     <p>Расстояние между абзацами с текстом составляет 16 пикселей.
                         Расстояние между буквами и словами — как в настройках шрифта.</p>
-                    <div class="exampleMenuWrapper">
+                    <div class="exampleMenuWrapper paddingBot24">
                         <img src="../img/typoText.svg" />
                     </div>
                     <p class="beforeh3">Основные текстовые блоки набираются шрифтом начертания “book”. Чтобы виделить информацию используйте начертания ”bold” и “medium”. Старайтесь выделать частично и только минимальную информацию, избегайте выделения целых блоков.</p>
