--- a/index.html
+++ b/index.html
@@ -49,35 +49,19 @@
                 </div>
                 <div class="contentBlock" style="padding-bottom: 40px;">
                     <div class="principlesBlock">
-                        <div class="principlesElement" onclick="window.location.href = '/pages/about.html' ">
-                            О дизайн системе
-                        </div>
-                        <div class="principlesElement">
-                            Цвет
-                        </div>
-                        <div class="principlesElement">
-                            Типографика
-                        </div>
-                        <div class="principlesElement">
-                            Сетка
-                        </div>
-                        <div class="principlesElement">
-                            Навигация
-                        </div>
-                        <div class="principlesElement">
-                            Компоненты
-                        </div>
-                        <div class="principlesElement">
-                            Изображения
-                        </div>
-                        <div class="principlesElement">
-                            Загрузка контена
-                        </div>
+                        <img src="../img/about1.svg" onclick="window.location.href = '/pages/about.html'">
+                        <img src="../img/about2.svg" onclick="window.location.href = '/pages/colors.html'">
+                        <img src="../img/about3.svg" onclick="window.location.href = '/pages/typography.html'">
+                        <img src="../img/about4.svg" onclick="window.location.href = '/pages/layout.html'">
+                        <img src="../img/about5.svg" onclick="window.location.href = '/pages/tabs.html'">
+                        <img src="../img/about6.svg" onclick="window.location.href = '/pages/buttons.html'">
+                        <img src="../img/about7.svg" onclick="window.location.href = '/pages/images.html'">
+                        <img src="../img/about8.svg" onclick="window.location.href = '/pages/loading.html'">
                     </div>
                 </div>
                 <div class="contentBlock LinkBlock">
                     <img src="./img/figmaLogo.svg">
-                    <a href="https://www.figma.com/file/J3PAQy0cyd1QbQ9SkZKDGa/MEILE-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD-%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B0?type=design&node-id=0-1&mode=design&t=zRWtMkBnSO1BRoYR-0"><p>Дизайн-система meile</p></a>
+                    <p class="pLink">Дизайн-система meile</a>
                 </div>
             </div>
             <div id="footer">
