--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_3" href="./pages/radioButton.html">RadioButton</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_4" href="./pages/modal.html">Modal</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_5" href="./pages/icons.html">Icons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_6" href="./pages/calendar.html">DatePicker</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_7" href="./pages/tags.html">Tags</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_8" href="./pages/input.html">Input</a>
                 </div>
                 <a class="firstLevel" id="navbarFirstLevel7" href="./pages/images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./pages/loading.html">Загрузка контена</a>
@@ -49,19 +52,19 @@
                 </div>
                 <div class="contentBlock" style="padding-bottom: 40px;">
                     <div class="principlesBlock">
-                        <img src="../img/about1.svg" onclick="window.location.href = '/pages/about.html'">
-                        <img src="../img/about2.svg" onclick="window.location.href = '/pages/colors.html'">
-                        <img src="../img/about3.svg" onclick="window.location.href = '/pages/typography.html'">
-                        <img src="../img/about4.svg" onclick="window.location.href = '/pages/layout.html'">
-                        <img src="../img/about5.svg" onclick="window.location.href = '/pages/tabs.html'">
-                        <img src="../img/about6.svg" onclick="window.location.href = '/pages/buttons.html'">
-                        <img src="../img/about7.svg" onclick="window.location.href = '/pages/images.html'">
-                        <img src="../img/about8.svg" onclick="window.location.href = '/pages/loading.html'">
+                        <img src="./img/about1.svg" onclick="window.location.href = '/pages/about.html'">
+                        <img src="./img/about2.svg" onclick="window.location.href = '/pages/colors.html'">
+                        <img src="./img/about3.svg" onclick="window.location.href = '/pages/typography.html'">
+                        <img src="./img/about4.svg" onclick="window.location.href = '/pages/layout.html'">
+                        <img src="./img/about5.svg" onclick="window.location.href = '/pages/tabs.html'">
+                        <img src="./img/about6.svg" onclick="window.location.href = '/pages/buttons.html'">
+                        <img src="./img/about7.svg" onclick="window.location.href = '/pages/images.html'">
+                        <img src="./img/about8.svg" onclick="window.location.href = '/pages/loading.html'">
                     </div>
                 </div>
                 <div class="contentBlock LinkBlock">
                     <img src="./img/figmaLogo.svg">
-                    <p class="pLink">Дизайн-система meile</a>
+                    <p class="pLink">Дизайн-система MEILE</a>
                 </div>
             </div>
             <div id="footer">
