--- a/pages/images.html
+++ b/pages/images.html
@@ -26,6 +26,9 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_3" href="./radioButton.html">RadioButton</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_4" href="./modal.html">Modal</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_5" href="./icons.html">Icons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_6" href="./calendar.html">DatePicker</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_7" href="./tags.html">Tags</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_8" href="./input.html">Input</a>
                 </div>  
                 <a class="firstLevel activeSideNav" id="navbarFirstLevel7" href="./images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
