--- a/pages/layout.html
+++ b/pages/layout.html
@@ -26,6 +26,9 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_3" href="./radioButton.html">RadioButton</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_4" href="./modal.html">Modal</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_5" href="./icons.html">Icons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_6" href="./calendar.html">DatePicker</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_7" href="./tags.html">Tags</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_8" href="./input.html">Input</a>
                 </div>  
                 <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
@@ -79,7 +82,7 @@
                     <div class="exampleMenuWrapper paddingBot28">
                         <img src="../img/layout_module2.svg" />
                     </div>
-                    <p>Также возможно использование четверти модуля (2px) при выборе шрифта или отступов, но рекомендуется использовать не меньше половины модуля.</p>
+                    <p>Также возможно использование четверти модуля (2px) при выборе шрифта<br>или отступов, но рекомендуется использовать не меньше половины модуля.</p>
                     <div class="exampleMenuWrapper paddingBot28">
                         <img src="../img/layout_module3.svg" />
                     </div>
